# machine-emulator

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .typos.toml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  Dockerfile  LICENSES.md  Makefile  README.md  hypervisor.md  set_lua_env_hp.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: Dockerfile  Dockerfile.alpine  build.yml  commits.yml
debian/: .gitignore  cartesi-machine-emulator-dev.install  cartesi-machine-emulator0.install  changelog  control  copyright  machine-emulator-dev.install  machine-emulator0.install  rules
debian/patches/: add-generated-files  fix-make-clean  fix-removal-of-generated-files  series
doc/: Doxyfile  Makefile  index.md
doc/blockchain/: hash.md  index.md  vg.md
doc/doxygen/: Doxyfile
doc/host/: cmdline.md  index.md  lua.md
docker/: Dockerfile  busybox-1.27.config  lua-5.3.4.patch  poweroff.c  riscv-pk.patch  riscvemu-2017-08-06.patch  riscvemu.cfg  run-qemu.sh  squash
docker/buildroot/: Dockerfile  buildroot-lua.patch  buildroot_rootfs_config
license/: riscvemu-license.txt
risc0/: .gitignore  Makefile  README.md  step-log-util.lua
risc0/cpp/: Makefile  (+5 more)
risc0/rust/cartesi-risc0/: Cargo.toml
risc0/rust/cartesi-risc0/src/: lib.rs  main.rs
risc0/rust/cartesi-risc0/tests/: Makefile  create-fixtures.lua  test_prove_and_verify.rs
risc0/rust/methods/guest/: Cargo.toml  build.rs
risc0/rust/methods/guest/src/: main.rs
riscv-arch-tests/: .gitignore  Makefile
rust/verify_steps/methods/guest/: Cargo.toml  build.rs
rust/verify_steps/methods/guest/src/: main.rs
src/: .gitignore  Makefile  access-log.h  access-log.hpp  address-range-constants.h  address-range-constants.hpp  address-range-defines.h  address-range-description.h  address-range-description.hpp  address-range.h  address-range.hpp  algorithm.h  algorithm.hpp  array2d.h  array2d.hpp  asio-config.h  assert-printf.h  assert-printf.hpp  back-merkle-tree.cpp  back-merkle-tree.h  back-merkle-tree.hpp  base64.cpp  base64.h  base64.hpp  benchmark.txt  borrowed-reference.h  bracket-note.h  bracket-note.hpp  c-machine.c  cartesi-machine-stored-hash.lua  cartesi-machine-tests.lua  cartesi-machine.lua  circular-buffer.h  client.cpp  clint-address-range.cpp  clint-address-range.h  clint-address-range.hpp  clint-factory.cpp  clint-factory.h  clint.cpp  (+484 more)
src/cartesi/: calldata.lua  evmu.lua  gdbstub.lua  machine_ext.lua  merkle.lua  proof.lua  util.lua
src/dis/: Makefile  main.cpp
src/dis/elf/: riscv.h
src/dis/opcode/: riscv-dis.cpp  riscv-dis.h  riscv-opc.c
src/doc/: Doxyfile
src/emulator/: Makefile  access-log.h  access-note.h  cartesi-base.proto  cartesi-constants.h  cartesi_base_pb2.py  client.cpp  clint.cpp  clint.h  core.proto  core_pb2.py  core_pb2_grpc.py  cryptopp-keccak-256-hasher.h  cutils.c  cutils.h  device-state-access.h  emulator-config.cpp  emulator-config.h  emulator.cpp  emulator.h  fdt.c  fdt.cpp  fdt.h  fs_disk.c  generate_python_grpc_code.sh  generator.ipynb  hash.cpp  htif.cpp  htif.h  i-device-state-access.h  i-hasher.h  i-state-access.h  i-virtual-state-access.h  interpret.cpp  interpret.h  iomem.c  iomem.cpp  iomem.h  json.c  keccak-256-hasher.h  (+53 more)
src/emulator/rom/: Makefile
src/emulator/rom/code/: rom.S
src/emulator/rom/example/: ROM.ld
src/emulator/rom/src/: device-tree.cpp  device-tree.h  entry.S  rom.in.ld  stdlib.c
src/emulator/rom/test/: Makefile  bootstrap.S  bootstrap.ld  sd_pma_overflow.S
src/htif/: htifpoweroff.c  makefile
src/rom/: Makefile
src/rom/example/: Makefile
src/rom/src/: Makefile  device-tree.cpp  entry.S  init.cpp  rom-defines.h  util.cpp  util.h
src/rom/test/: Makefile
src/spec/: all-tests.lua  clua-tests.lua  config-tests.lua  htif-tests.lua  keccak-tests.lua  machine-tests.lua  step-tests.lua
src/spec/util/: fs.lua  lester.lua
src/subprojects/: mongoose.wrap
src/subprojects/packagefiles/mongoose/: meson.build
src/tests/: autorun  data.lua  htif-console.lua  htif-rollup.lua  htif-yield.lua  log-with-mtime-transition.lua  machine-bind.lua  machine-test.lua  mcycle-overflow.lua  mtime-interrupt.lua  run.sh  test-grpc-server.sh  test-jsonrpc-fork.lua  test-jsonrpc-server.sh  util.lua  utils.lua  yield-sink.lua
tests/: Dockerfile  Makefile  dependencies  dependencies.sha256
tools/: docker-entrypoint.sh  gen-interpret-jump-table.lua
uarch/: .gitignore  Makefile  README.md  compute-uarch-pristine-hash.cpp  machine-uarch-bridge-state-access.h  run-micro-emulator.lua  uarch-bridge-state-access.hpp  uarch-ecall.c  uarch-ecall.h  uarch-machine-state-access.h  uarch-printf.c  uarch-printf.h  uarch-ram-entry.S  uarch-ram.ld.in  uarch-rom-entry.S  uarch-rom.ld.in  uarch-run.cpp  uarch-runtime.cpp  uarch-runtime.h  uarch-runtime.hpp  uarch-strict-aliasing.h  uarch-strict-aliasing.hpp
zisk/: Makefile  README.md
zkarch/: .gitignore  Makefile  zkarch-replay_steps.cpp  zkarch-runtime.cpp  zkarch-runtime.h
(+287 files in other folders)
