[package]
name = "cartesi_risc0"
version = "0.1.0"
edition = "2021"

[lib]
name = "cartesi_risc0"
path = "src/lib.rs"

[[bin]]
name = "cartesi-risc0-cli"
path = "src/main.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.5" }
risc0-binfmt = { version = "3.0.4", default-features = false, features = ["std"] }
hex = "0.4"
bincode = "1.3"
serde = "1.0"


[features]
default = []
prove = ["risc0-zkvm/prove"]
cuda = ["risc0-zkvm/cuda"]
