[package]
name = "teste1"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", default-features = true }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[build-dependencies]
cc = "1.0"
